# VentiBot

./: .gitignore  README.md  main.py  main_backup.py  music-player-1245c-firebase-adminsdk-o9rrl-a3f43de47f.json  pyproject.toml  requirements.txt
src/components/: Degen.py  Music.py  Twitter.py  Voice.py  birthday.py  degen.py  music.py  stocks.py
src/components/db/: birthday_db.py  stocks_db.py
src/components/etc/: birthday_db.py  constants.py  firebase_db.py  stocks_db.py
src/components/helpers/: hpag_stocks.py  info_stocks.py  trans_stocks.py
src/res/: help_res.py
src/songs/: Songs.py  Spotify.py  YTDL.py
src/utils/: keep_alive.py
