[tool.poetry]
name = "repl_python3_VentiBot"
version = "0.1.0"
description = "Venti Bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
wavelink = "^0.9.6"
youtube-dl = "^2020.11.12"
pynacl = "^1.4.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.1"
spotipy = "^2.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
